Fixed a regression in the Wrap Tool

Restored an optimization that made the preview for the Wrap Tool
work in Flake coordinates when it is a sane thing to do, that is when
the size of the preview in flake coordinates is smaller than the size
of the stored thumbnail. Now we can close the bug about huge images: the
thumbnail can't be more than 2000px anymore.

BUG:263170